# cmake-libsdl2

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc
